--- a/ChangeLog
+++ b/ChangeLog
@@ -2,11 +2,12 @@ SMWUserManual extension ChangeLog
 =================================
 
 
-VERSION XXXX
+VERSION 1.0.3
 
 
   FEATURES:
-
+    * add new discourse state LODTrust for help on the page Special:LODTrust
+    * check for CKeditor to see if the page is edited with a wysiwyg editor
 
 
   CHANGES:
